Add private registry handling script & update release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,3 +40,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
+
+      - name: Release to Terraform Cloud Private Registry
+        run: pip3 install requests && python3 scripts/private-registry-setup.py
+        env:
+          GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
+          TOKEN: ${{ secrets.TOKEN }}
+          VERSION: ${{ github.ref_name }}
